# baselibs_rust

./: .bazelrc  BUILD  Cargo.toml  MODULE.bazel  versions.json
.github/workflows/: build.yml  docs.yml  license_check.yml  lint_clippy.yml  rust_coverage.yml  tests.yml
examples/log_builtin/: BUILD  Cargo.toml
main/: genindex.html  index.html  schema_violations.json  search.html
main/module_docs/: index.html
pr-1/: genindex.html  index.html  searchindex.js
pr-13/: genindex.html  index.html
pr-14/: searchindex.js
pr-14/module_docs/: index.html
pr-19/: genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js
pr-19/_sources/: index.rst.txt
pr-19/module_docs/: index.html
pr-3/module_docs/: index.html
pr-32/: needs.json
pr-4/: searchindex.js
pr-60/: search.html
pr-64/: schema_violations.json
pr-65/: schema_violations.json
pr-68/: schema_violations.json
pr-69/: schema_violations.json
pr-70/: schema_violations.json
pr-71/: schema_violations.json
pr-72/: schema_violations.json
pr-84/: genindex.html  index.html  schema_violations.json  search.html
pr-84/module_docs/: index.html
pr-85/: schema_violations.json  search.html
pr-86/: schema_violations.json
pr-87/: schema_violations.json
pr-88/: schema_violations.json
pr-89/: schema_violations.json
pr-90/: schema_violations.json
pr-91/: genindex.html  index.html  schema_violations.json  search.html
src/log/mw_log/: BUILD  Cargo.toml  __private_api.rs  lib.rs  macros.rs
src/log/mw_log/tests/: integration.rs  macros.rs
v0.1.2/: schema_violations.json
(+860 files in other folders)
