# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

[package]
name = "mw_log"
version.workspace = true
authors.workspace = true
readme.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
max_level_off = []
max_level_fatal = []
max_level_error = []
max_level_warn = []
max_level_info = []
max_level_debug = []
max_level_trace = []

release_max_level_off = []
release_max_level_fatal = []
release_max_level_error = []
release_max_level_warn = []
release_max_level_info = []
release_max_level_debug = []
release_max_level_trace = []

[dependencies]
mw_log_fmt.workspace = true
mw_log_fmt_macro.workspace = true

[lints]
workspace = true
